examples/test/testpolicy8893.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8893
  namespace: namespace346
spec:
  podSelector:
    matchLabels:
      key37: value14
      key26: value41
      key13: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value13
          key5: value34
      podSelector:
        matchLabels:
          key6: value16
          key25: value46
